--- a/admin/administrar_taekwondistas.html
+++ b/admin/administrar_taekwondistas.html
@@ -265,7 +265,9 @@
                             <p><b>DNI: </b>46629934</p>
                             <p><b>Peso: </b>73.6 kg</p>
                             <p><b>Altura: </b>176 cm</p>
+                            <p><b>Genero: </b>Masculino</p>
                             <p><b>Fecha Nacimiento: </b>11/08/2000</p>
+                            <p><b>Categoria: </b>Cinturon Verde</p>
                             <p><b>Nacionalidad: </b>Argentina</p>
                             <p><b>Telefono: </b>(351) 362-4961</p>
                           </div>
