--- a/admin/editar_taekwondista.html
+++ b/admin/editar_taekwondista.html
@@ -138,20 +138,53 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="form-group col-6">
+                    <div class="form-group col-4">
                       <label>Fecha de Nacimiento</label>
                       <div class="input-group date" id="reservationdate" data-target-input="nearest">
                         <input type="text" class="form-control datetimepicker-input" data-target="#reservationdate"
-                          control-id="ControlID-4" placeholder="dd/mm/yyyy" value="11/08/2000" />
+                          control-id="ControlID-4" placeholder="dd/mm/yyyy" value="11/08/2000"/>
                         <div class="input-group-append" data-target="#reservationdate" data-toggle="datetimepicker">
                           <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                         </div>
                       </div>
                     </div>
-                    <div class="form-group col-6">
+                    <div class="form-group col-4">
                       <label>Nacionalidad</label>
                       <input type="text" class="form-control" placeholder="Ingrese su Nacionalidad" value="Argentina">
                     </div>
+                    <div class="form-group col-4">
+                      <label>Genero</label>
+                      <select class="form-control" control-id="ControlID-24">
+                      <option>Masculino</option>
+                      <option>Femenino</option>
+                      <option>Sin especificar</option>
+                      </select>
+                      </div>
+                  </div>
+                  <div class="form-group">
+                    <label>Categoria</label>
+                    <select class="form-control select2" style="width: 100%;">
+                      <option disabled>Seleccione el color del cinto</option>
+                      <option>Blanco</option>
+                      <option>Blanco punta Amarilla</option>
+                      <option>Amarillo</option>
+                      <option selected>Amarillo punta Verde</option>
+                      <option>Verde</option>
+                      <option>Verde punta Azul</option>
+                      <option>Azul</option>
+                      <option>Azul punta Roja</option>
+                      <option>Roja</option>
+                      <option>Roja punta Negra</option>
+                      <option>Negro I</option>
+                      <option>Negro II</option>
+                      <option>Negro III</option>
+                      <option>Negro IV</option>
+                      <option>Negro V</option>
+                      <option>Negro VI</option>
+                      <option>Negro VII</option>
+                      <option>Negro VIII</option>
+                      <option>Negro IX</option>
+                    </select>
                   </div>
                   <div class="form-group">
                     <label>Foto</label>
