--- a/practicante/index_practicante.html
+++ b/practicante/index_practicante.html
@@ -113,10 +113,10 @@
                   <!-- small box -->
                   <div class="small-box bg-success">
                     <div class="inner">
-                      <h3>Modificar Datos</h3>
-                      <p>Cambiar datos personales</p>
+                      <h3>Consultar Datos</h3>
+                      <p>Consultar los datos personales</p>
                     </div>
-                    <a href="modificar_datos.html" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
+                    <a href="ver_datos.html" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
                   </div>
                 </div>
                 <!-- ./col -->
