--- a/sabonim/index_sabonim.html
+++ b/sabonim/index_sabonim.html
@@ -119,10 +119,10 @@
                   <!-- small box -->
                   <div class="small-box bg-success">
                     <div class="inner">
-                      <h3>Modificar Datos</h3>
-                      <p>Cambiar datos personales</p>
+                      <h3>Consultar Datos</h3>
+                      <p>Consultar los datos personales</p>
                     </div>
-                    <a href="modificar_datos.html" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
+                    <a href="ver_datos.html" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
                   </div>
                 </div>
                 <!-- ./col -->
@@ -130,10 +130,10 @@
                   <!-- small box -->
                   <div class="small-box bg-danger">
                     <div class="inner">
-                      <h3>Modificar Dojang</h3>
-                      <p>Cambiar datos del Dojang</p>
+                      <h3>Consultar Dojang</h3>
+                      <p>Consultar datos del Dojang a cargo</p>
                     </div>
-                    <a href="editar_dojang.html" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
+                    <a href="ver_dojang.html" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
                   </div>
                 </div>
                 <!-- ./col -->
@@ -143,7 +143,7 @@
               <div class="row">
                 <div class="col-lg-6 col-6">
                   <!-- small box -->
-                  <div class="small-box bg-default">
+                  <div class="small-box bg-purple">
                     <div class="inner">
                       <h3>Solicitudes</h3>
                       <p>Ver estado de Solicitudes</p>
