--- a/sabonim/ver_dojang.html
+++ b/sabonim/ver_dojang.html
@@ -52,7 +52,7 @@
           <!-- Left navbar links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="index_admin.html" class="nav-link">Inicio</a>
+              <a href="index_sabonim.html" class="nav-link">Inicio</a>
             </li>
           </ul>
 
@@ -80,86 +80,55 @@
       <!-- Content Header (Page header) -->
       <div class="content-header">
         <div class="container">
-
-          <!-- Content Header (Page header) -->
-          <section class="content-header">
-            <div class="container-fluid">
-              <div class="row mb-2">
-                <div class="col-sm-6">
-                  <h1>Solicitud</h1>
-                </div>
+          <div class="col-md-12 mx-auto">
+            <div class="card card-primary">
+              <div class="card-header">
+                <h3 class="card-title">VER DOJANG</h3>
               </div>
-            </div><!-- /.container-fluid -->
-          </section>
-
-          <!-- Main content -->
-          <section class="content">
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="card card-primary card-outline">
-                    <div class="card-body p-0">
-                      <div class="mailbox-read-info">
-                        <h5>Matias Godoy solicito crear un usuario</h5>
-                        <h6><span class="mailbox-read-time float-right">15 Oct. 2023 11:03 AM</span></h6>
-                      </div>
-                      <!-- /.mailbox-controls -->
-                      <div class="mailbox-read-message">
-                        <p>Los datos del usuario nuevo son:</p>
-                        <p><b>Nombre:</b> Matias</p>
-                        <p><b>Apellido:</b> Godoy</p>
-                        <p><b>DNI:</b> 12345678</p>
-                        <p><b>Peso:</b> 74.3 kg</p>
-                        <p><b>Altura:</b> 1.80 m</p>
-                        <p><b>Genero:</b> Masculino</p>
-                        <p><b>Fecha de Nacimiento:</b> 15/10/1998</p>
-                        <p><b>Categoria:</b> Cinturon Verde</p>
-                        <p><b>Nacionalidad:</b> Argentina</p>
-                        <p><b>Num. Telefono:</b> 3515977253</p>
-                        <p><b>Contacto Emergencia:</b> 3512345678</p>
-                      </div>
-                    </div>
-                    
-                    <!-- /.card-footer -->
-                    <div class="card-footer">
-                      <div class="float-right">
-                        <a type="button" class="btn btn-success" href="administrar_solicitudes.html"><i class="fas fa-check"></i> Aprobar</a>
-                      </div>
-                      <a type="button" class="btn btn-danger" href="administrar_solicitudes.html"><i class="far fa-xmark"></i> Rechazar</a>
-                    </div>
-                    <!-- /.card-footer -->
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-6">
+                    <h5><b>Nombre:</b> El Dojang Cordobe</h5><br>
+                    <p class="mt-3"><b>Dias:</b> Lunes, Martes, Miercoles, Jueves, Viernes</p><br>
+                    <h6><b>Horario inicio:</b> 10:00 AM</h6>
+                    <p><b>Horario fin:</b> 8:00 PM</p><br>
+                    <p><b>Precio:</b> $13.000,00</p><br>
+                    <h6><b>Restricciones:</b></h6>
+                    <p>• No se permite el ingreso de menores de 18 años</p><br>
+                    <h6><b>Instructor:</b> Marcos Faletto</h6><br>
+                    <div class="text-center"><a href="administrar_taekwondistas.html" class="btn btn-info">Ver Lista de Practicantes</a></div>
                   </div>
-                  <!-- /.card -->
+                  <div class="col-6">
+                    <a href="editar_dojang.html" class="text-right"><h5><span class="badge bg-warning">Editar Dojang</span></h5></a>
+                    <h6><b>Ubicacion:</b></h6>
+                    <div class="mapouter"><div class="gmap_canvas"><iframe src="https://maps.google.com/maps?q=Av.%20Velez%20Sarsfield%201611&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" style="width: 490px; height: 400px;"></iframe><style>.mapouter{position:relative;height:400px;width:490px;background:#fff;}</style><a href="https://blooketjoin.org" style="color:#fff !important; position:absolute !important; top:0 !important; z-index:0 !important;">blooket join</a><style>.gmap_canvas{overflow:hidden;height:400px;width:490px}.gmap_canvas iframe{position:relative;z-index:2}</style></div></div>
+                    <h6 class="mt-3"><b>Direccion:</b> Av. Velez Sarsfield 1611</h6>
+                    <h6><b>Ciudad:</b> Cordoba</h6>
+                  </div>
                 </div>
-                <!-- /.col -->
               </div>
-              <!-- /.row -->
-            </div><!-- /.container-fluid -->
-          </section>
-          <!-- /.content -->
-        </div>
-        <!-- /.content-wrapper -->
-
-      </div><!-- /.container-fluid -->
+            </div>
+          </div>
+        </div><!-- /.container-fluid -->
+      </div>
     </div>
-  </div>
-  <!-- /.content-wrapper -->
+    <!-- /.content-wrapper -->
 
-  <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
-    <!-- Control sidebar content goes here -->
-  </aside>
-  <!-- /.control-sidebar -->
+    <!-- Control Sidebar -->
+    <aside class="control-sidebar control-sidebar-dark">
+      <!-- Control sidebar content goes here -->
+    </aside>
+    <!-- /.control-sidebar -->
 
-  <!-- Main Footer -->
-  <footer class="main-footer">
-    <!-- To the right -->
-    <div class="float-right d-none d-sm-inline">
-      Ingenieria de Software I
-    </div>
-    <!-- Default to the left -->
-    <strong>Copyright &copy; 2023 <a href="https://ubp.edu.ar">UBP</a>.</strong> Derechos reservados.
-  </footer>
+    <!-- Main Footer -->
+    <footer class="main-footer">
+      <!-- To the right -->
+      <div class="float-right d-none d-sm-inline">
+        Ingenieria de Software I
+      </div>
+      <!-- Default to the left -->
+      <strong>Copyright &copy; 2023 <a href="https://ubp.edu.ar">UBP</a>.</strong> Derechos reservados.
+    </footer>
   </div>
   <!-- ./wrapper -->
 
