--- a/admin/agregar_dojang.html
+++ b/admin/agregar_dojang.html
@@ -5,23 +5,23 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Taekwondo</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet"
@@ -55,8 +55,7 @@
     <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
       <div class="container">
         <a href="#" class="navbar-brand">
-          <img src="../assets/img/World_Taekwondo.png" alt="Logo" class="brand-image"
-            style="opacity: .8"/>
+          <img src="../assets/img/World_Taekwondo.png" alt="Logo" class="brand-image" style="opacity: .8" />
           <span class="brand-text font-weight-light">Subsistema taekwondo</span>
         </a>
 
@@ -135,7 +134,6 @@
                       <option>Domingo</option>
                     </select>
                   </div>
-
                   <div class="row">
                     <div class="form-group col-6">
                       <label>Horario inicio</label>
@@ -171,20 +169,24 @@
                       </div>
                     </div>
                   </div>
-
-                  <div class="form-group">
-                    <label>Instructor</label>
-                    <select class="form-control select2" style="width: 100%;">
-                      <option selected="selected">Seleccione el Instructor</option>
-                      <option>Federico Marquez</option>
-                      <option>Matias Godoy Cabrera</option>
-                      <option>Lucia Oliva</option>
-                      <option>Marcos Faletto</option>
-                      <option>Ignacio Iriarte</option>
-                      <option>Luciano Litwin</option>
-                    </select>
+                  <div class="row">
+                    <div class="form-group col-6">
+                      <label>Instructor</label>
+                      <select class="form-control select2" style="width: 100%;">
+                        <option selected="selected">Seleccione el Instructor</option>
+                        <option>Federico Marquez</option>
+                        <option>Matias Godoy Cabrera</option>
+                        <option>Lucia Oliva</option>
+                        <option>Marcos Faletto</option>
+                        <option>Ignacio Iriarte</option>
+                        <option>Luciano Litwin</option>
+                      </select>
+                    </div>
+                    <div class="form-group col-6">
+                      <label>Restricciones</label>
+                      <textarea class="form-control" rows="1" placeholder="Ingrese las restricciones ..."></textarea>
+                    </div>
                   </div>
-
                   <div class="card-footer">
                     <button type="submit" class="btn btn-default" control-id="ControlID-10">Cancelar</button>
                     <button type="submit" class="btn btn-primary float-right" control-id="ControlID-9">Guardar</button>
