--- a/practicante/ver_dojang.html
+++ b/practicante/ver_dojang.html
@@ -197,7 +197,9 @@
                     <h6 class="mt-5"><b>Ubicacion:</b></h6>
                     <div class="mapouter"><div class="gmap_canvas"><iframe src="https://maps.google.com/maps?q=Av.%20Velez%20Sarsfield%201611&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" style="width: 490px; height: 400px;"></iframe><style>.mapouter{position:relative;height:400px;width:490px;background:#fff;}</style><a href="https://blooketjoin.org" style="color:#fff !important; position:absolute !important; top:0 !important; z-index:0 !important;">blooket join</a><style>.gmap_canvas{overflow:hidden;height:400px;width:490px}.gmap_canvas iframe{position:relative;z-index:2}</style></div></div>
                     <h6 class="mt-3"><b>Direccion:</b> Av. Velez Sarsfield 1611</h6>
-                    <h6><b>Ciudad:</b> Cordoba</h6>
+                    <h6><b>Ciudad:</b> Cordoba</h6><br>
+                    <h6><b>Restricciones:</b></h6>
+                    <p>• No se permite el ingreso de menores de 18 años</p>
                   </div>
                 </div>
               </div>
@@ -234,7 +236,9 @@
                 <p><b>DNI: </b>46629934</p>
                 <p><b>Peso: </b>73.6 kg</p>
                 <p><b>Altura: </b>176 cm</p>
+                <p><b>Genero: </b>Masculino</p>
                 <p><b>Fecha Nacimiento: </b>11/08/2000</p>
+                <p><b>Categoria: </b>Cinturon Verde</p>
                 <p><b>Nacionalidad: </b>Argentina</p>
                 <p><b>Telefono: </b>(351) 362-4961</p>
               </div>
