--- a/sabonim/administrar_taekwondistas.html
+++ b/sabonim/administrar_taekwondistas.html
@@ -88,7 +88,7 @@
             <div class="col-12 mx-auto">
               <div class="card">
                 <div class="card-header">
-                  <h3 class="card-title">LISTA DE TAEKWONDISTAS</h3>
+                  <h3 class="card-title">LISTA DE PRACTICANTES</h3>
                   <div class="card-tools">
                     <div class="row">
                       <div class="input-group input-group" style="width: 300px;">
@@ -244,7 +244,7 @@
                   <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h4 class="modal-title">Informacion Taekwondista</h4>
+                        <h4 class="modal-title">Informacion Practicante</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                         </button>
@@ -265,7 +265,9 @@
                             <p><b>DNI: </b>46629934</p>
                             <p><b>Peso: </b>73.6 kg</p>
                             <p><b>Altura: </b>176 cm</p>
+                            <p><b>Genero: </b>Masculino</p>
                             <p><b>Fecha Nacimiento: </b>11/08/2000</p>
+                            <p><b>Categoria: </b>Cinturon Verde</p>
                             <p><b>Nacionalidad: </b>Argentina</p>
                             <p><b>Telefono: </b>(351) 362-4961</p>
                           </div>
