--- a/sabonim/agregar_taekwondista.html
+++ b/sabonim/agregar_taekwondista.html
@@ -100,7 +100,7 @@
           <div class="col-md-12 mx-auto">
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">FORMULARIO TAEKWONDISTAS</h3>
+                <h3 class="card-title">FORMULARIO PRACTICANTE</h3>
               </div>
               <form>
                 <div class="card-body">
@@ -129,7 +129,7 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="form-group col-6">
+                    <div class="form-group col-4">
                       <label>Fecha de Nacimiento</label>
                       <div class="input-group date" id="reservationdate" data-target-input="nearest">
                         <input type="text" class="form-control datetimepicker-input" data-target="#reservationdate"
@@ -139,10 +139,43 @@
                         </div>
                       </div>
                     </div>
-                    <div class="form-group col-6">
+                    <div class="form-group col-4">
                       <label>Nacionalidad</label>
                       <input type="text" class="form-control" placeholder="Ingrese su Nacionalidad">
                     </div>
+                    <div class="form-group col-4">
+                      <label>Genero</label>
+                      <select class="form-control" control-id="ControlID-24">
+                      <option>Masculino</option>
+                      <option>Femenino</option>
+                      <option>Sin especificar</option>
+                      </select>
+                      </div>
+                  </div>
+                  <div class="form-group">
+                    <label>Categoria</label>
+                    <select class="form-control select2" style="width: 100%;">
+                      <option disabled selected>Seleccione el color del cinto</option>
+                      <option>Blanco</option>
+                      <option>Blanco punta Amarilla</option>
+                      <option>Amarillo</option>
+                      <option>Amarillo punta Verde</option>
+                      <option>Verde</option>
+                      <option>Verde punta Azul</option>
+                      <option>Azul</option>
+                      <option>Azul punta Roja</option>
+                      <option>Roja</option>
+                      <option>Roja punta Negra</option>
+                      <option>Negro I</option>
+                      <option>Negro II</option>
+                      <option>Negro III</option>
+                      <option>Negro IV</option>
+                      <option>Negro V</option>
+                      <option>Negro VI</option>
+                      <option>Negro VII</option>
+                      <option>Negro VIII</option>
+                      <option>Negro IX</option>
+                    </select>
                   </div>
                   <div class="form-group">
                     <label>Foto</label>
