--- a/sabonim/editar_dojang.html
+++ b/sabonim/editar_dojang.html
@@ -173,18 +173,23 @@
                       </div>
                     </div>
                   </div>
-
-                  <div class="form-group">
-                    <label>Instructor</label>
-                    <select class="form-control select2" style="width: 100%;">
-                      <option selected="selected">Seleccione el Instructor</option>
-                      <option>Federico Marquez</option>
-                      <option>Matias Godoy Cabrera</option>
-                      <option>Lucia Oliva</option>
-                      <option selected="selected">Marcos Faletto</option>
-                      <option>Ignacio Iriarte</option>
-                      <option>Luciano Litwin</option>
-                    </select>
+                  <div class="row">
+                    <div class="form-group col-6">
+                      <label>Instructor</label>
+                      <select class="form-control select2" style="width: 100%;">
+                        <option>Seleccione el Instructor</option>
+                        <option>Federico Marquez</option>
+                        <option>Matias Godoy Cabrera</option>
+                        <option>Lucia Oliva</option>
+                        <option selected="selected">Marcos Faletto</option>
+                        <option>Ignacio Iriarte</option>
+                        <option>Luciano Litwin</option>
+                      </select>
+                    </div>
+                    <div class="form-group col-6">
+                      <label>Restricciones</label>
+                      <textarea class="form-control" rows="1" placeholder="Ingrese las restricciones ...">Mayores de 18 años</textarea>
+                    </div>
                   </div>
 
                   <div class="card-footer">
