--- a/sabonim/ver_datos.html
+++ b/sabonim/ver_datos.html
@@ -51,7 +51,7 @@
           <!-- Left navbar links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="index_practicante.html" class="nav-link">Inicio</a>
+              <a href="index_sabonim.html" class="nav-link">Inicio</a>
             </li>
           </ul>
 
@@ -79,115 +79,50 @@
       <!-- Content Header (Page header) -->
       <div class="content-header">
         <div class="container">
-          <!-- Content Wrapper. Contains page content -->
-
-          <div class="container-fluid">
-            <div class="row mb-3">
-              <div class="col-sm-6">
-                <h1>Estado de Solicitudes</h1>
+          <div class="col-md-12 mx-auto">
+            <div class="card card-primary">
+              <div class="card-header">
+                <h3 class="card-title">VER DATOS PERSONALES</h3>
+              </div>
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-6">
+                    <img src="../dist/img/user8-128x128.jpg" alt="user-avatar" class="img-circle img-fluid ml-5">
+                    <br><br><br>
+                    <h6><b>Contacto Emergencia: </b></h6>
+                    <h6>• <b>Nombre: </b>Alicia Cabrera</h6>
+                    <h6>• <b>Telefono: </b>(351) 725-5025</h6>
+                    <h6>• <b>Relacion: </b>Madre</h6>
+                  </div>
+                  <div class="col-6">
+                    <div class="row">
+                      <div class="col-8">
+                        <p><b>Nombre: </b>Lucas Matias</p>
+                      </div>
+                      <div class="col-4">
+                        <a href="editar_taekwondista.html" class="text-right">
+                          <h5><span class="badge bg-warning">Editar Datos</span></h5>
+                        </a>
+                      </div>
+                    </div>
+                    <p><b>Apellido: </b>Godoy</p>
+                    <p><b>DNI: </b>46629934</p>
+                    <p><b>Peso: </b>73.6 kg</p>
+                    <p><b>Altura: </b>176 cm</p>
+                    <p><b>Genero: </b>Masculino</p>
+                    <p><b>Fecha Nacimiento: </b>11/08/2000</p>
+                    <p><b>Categoria: </b>Cinturon Verde</p>
+                    <p><b>Nacionalidad: </b>Argentina</p>
+                    <p><b>Telefono: </b>(351) 362-4961</p>
+                  </div>
+                </div>
               </div>
             </div>
-          </div><!-- /.container-fluid -->
-
-          <!-- Main content -->
-          <section class="content">
-            <div class="col-md-12">
-              <div class="card">
-                <div class="card-header">
-                  <h3 class="card-title">Solicitudes</h3>
-                </div>
-                <!-- /.card-header -->
-                <div class="card-body p-0">
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th style="width: 10px">#</th>
-                        <th>Solicitud</th>
-                        <th style="width: 120px">Estado</th>
-                        <th style="width: 40px"></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>1.</td>
-                        <td>Solicitud de modificacion de datos del usuario</td>
-                        <td><span class="badge bg-warning">Pendiente</span></td>
-                        <td><button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i
-                              class="fas fa-eye"></i></button></td>
-                      </tr>
-                      <tr>
-                        <td>2.</td>
-                        <td>Solicitud de modificacion de datos del usuario</td>
-                        <td><span class="badge bg-danger">Rechazada</span></td>
-                        <td><button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i
-                              class="fas fa-eye"></i></button></td>
-                      </tr>
-                      <tr>
-                        <td>3.</td>
-                        <td>Solicitud de creacion de usuario</td>
-                        <td><span class="badge bg-success">Aprobada</span></td>
-                        <td><button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i
-                              class="fas fa-eye"></i></button></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.card-body -->
-              </div>
-              <!-- /.card -->
-            </div>
-          </section>
-          <!-- /.content -->
+          </div>
         </div><!-- /.container-fluid -->
       </div>
     </div>
     <!-- /.content-wrapper -->
-
-    <!-- Modal Ver taekwondista-->
-    <div class="modal fade" id="modal-lg">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h4 class="modal-title">Ver Estado Solicitud</h4>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <h5>Solicitó crear el usuario con los siguientes datos:</h5><br><br>
-            <div class="row">
-              <div class="col-6">
-                <img src="../dist/img/user8-128x128.jpg" alt="user-avatar" class="img-circle img-fluid ml-5">
-                <br><br><br>
-                <h6><b>Contacto Emergencia: </b></h6>
-                <h6>• <b>Nombre: </b>Alicia Cabrera</h6>
-                <h6>• <b>Telefono: </b>(351) 725-5025</h6>
-                <h6>• <b>Relacion: </b>Madre</h6>
-              </div>
-              <div class="col-6">
-                <p><b>Nombre: </b>Lucas Matias</p>
-                <p><b>Apellido: </b>Godoy</p>
-                <p><b>DNI: </b>46629934</p>
-                <p><b>Peso: </b>73.6 kg</p>
-                <p><b>Altura: </b>176 cm</p>
-                <p><b>Genero: </b>Masculino</p>
-                <p><b>Fecha Nacimiento: </b>11/08/2000</p>
-                <p><b>Categoria: </b>Cinturon Verde</p>
-                <p><b>Nacionalidad: </b>Argentina</p>
-                <p><b>Telefono: </b>(351) 362-4961</p>
-              </div>
-            </div>
-            <h5><span class="badge bg-success">Aprobada</span></h5>
-          </div>
-          <div class="modal-footer justify-content-left">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
-          </div>
-        </div>
-        <!-- /.modal-content -->
-      </div>
-      <!-- /.modal-dialog -->
-    </div>
-    <!-- /.modal -->
 
     <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
